--- a/markup/add-new-point-without-destination.html
+++ b/markup/add-new-point-without-destination.html
@@ -105,7 +105,7 @@
                     <input class="event__type-toggle  visually-hidden" id="event-type-toggle-1" type="checkbox">
 
                     <div class="event__type-list">
-                      <fieldset class="event__type-group">
+                      <fieldset class="">
                         <legend class="visually-hidden">Event type</legend>
 
                         <div class="event__type-item">
