--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,12 @@
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
 
         <div class="trip-main">
-              <!-- Фильтры -->  
+          <div class="trip-main__trip-controls  trip-controls">
+            <div class="trip-controls__filters">
+              <h2 class="visually-hidden">Filter events</h2>
+              <!-- Фильтры -->
+            </div>
+          </div>
         </div>
       </div>
     </header>
